# py-zfapi

./: .gitignore  Makefile  README.md  __init__.py  client.py  pyproject.toml  setup.py
tests/: conftest.py
tests/endpoints/: test_base.py
tests/endpoints/alerts/: test_alerts.py  test_alerts_v2.py
tests/endpoints/alerts/fixtures/: get_v2_200.json  list_v1_200.json  list_v2_200.json
zfapi/: exceptions.py  settings.py
zfapi/endpoints/: alerts.py  alerts_v2.py  base.py  enterprises.py  enterprises_v2.py  entities.py
